--- a/navbar.html
+++ b/navbar.html
@@ -7,7 +7,7 @@
                
                <!-- Logo -->
                <p id="irmenuid" >
-                   <img  class="w-30 hover:scale-105 transition-all" src="./img/pnglogo.png" alt="Logo">
+                   <img  class="w-30 hover:scale-105 transition-all" src="img/pnglogo.png" alt="Logo">
                </p>
    
                <!-- Menú normal (escondido en móviles) -->
